adding design back into dpl

--- a/demo.orch.yaml
+++ b/demo.orch.yaml
@@ -24,4 +24,20 @@ pipeline:
         componentName: "Alter Warehouse 2"
         warehouse: "[Environment Default]"
         commandType: "Suspend"
-
+design:
+  components:
+    Start:
+      position:
+        x: 0
+        "y": 0
+      tempMetlId: 1
+    Alter Warehouse:
+      position:
+        x: 150
+        "y": 0
+      tempMetlId: 2
+    Alter Warehouse 2:
+      position:
+        x: 340
+        "y": 0
+      tempMetlId: 3
